--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" href="https://avatars.githubusercontent.com/u/68224412?v=4">
-		<title>zhwzein (zahwazein)</title>
+		<title>yann1945 (YannXD)</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/style.css">
@@ -24,8 +24,8 @@
 					<a href="https://github.com/zhwzein?tab=repositories">
 					<img src="https://avatars.githubusercontent.com/u/68224412?v=4" alt="img" style="object-fit: cover;">
 					</a>
-					<span>zahwazein</span>
-					<p>~ my life is null and void</p>
+					<span>YannExdi</span>
+					<p>Cuma Programmer Karbitan<br>CTRL+C CTRL+V</p>
 				</section>
 			</div>
 			<div class="col-lg-8">
@@ -36,16 +36,16 @@
 						<div class="header_links">
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
-								<li class="nav_link"><a href="https://api.ouzen.xyz">Rest Api</a></li>
-								<li class="nav_link"><a href="https://github.com/zhwzein?tab=repositories">Repository</a></li>
+								<li class="nav_link"><a href="https://api.yannownd.xyz">Rest Api</a></li>
+								<li class="nav_link"><a href="https://github.com/yann1945">Repository</a></li>
 							</ul>
 						</div>
 					</nav>
 					<section class="main2">
 						<ul>
-							<li><a target="_blank" href="https://t.me/zhwzein"><i class="fab fa-telegram"></i></a></li>
-							<li><a target="_blank" href="https://github.com/zhwzein"><i class="fab fa-github"></i></a></li>
-							<li><a target="_blank" href="https://instagram.com/zhwzein"><i class="fab fa-instagram"></i></a></li>
+							<li><a target="_blank" href="https://t.me/YannExdi"><i class="fab fa-telegram"></i></a></li>
+							<li><a target="_blank" href="https://github.com/yann1945"><i class="fab fa-github"></i></a></li>
+							<li><a target="_blank" href="https://instagram.com/ynnn1945"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</section>
 				</header>
