--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<img src="https://avatars.githubusercontent.com/u/68224412?v=4" alt="img" style="object-fit: cover;">
 					</a>
 					<span>YannExdi</span>
-					<p>Cuma Programmer Karbitan<br>CTRL+C CTRL+V</p>
+					<p>Programmer Karbitan<br>CTRL+C CTRL+V</p>
 				</section>
 			</div>
 			<div class="col-lg-8">
