--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" href="https://avatars.githubusercontent.com/u/68224412?v=4">
+		<link rel="icon" href=https://avatars.githubusercontent.com/u/115077840?v=4">
 		<title>yann1945 (YannXD)</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -21,8 +21,8 @@
 		<div class="row no-gutters">
 			<div class="col-xl-4">
 				<section class="main">
-					<a href="https://github.com/zhwzein?tab=repositories">
-					<img src="https://avatars.githubusercontent.com/u/68224412?v=4" alt="img" style="object-fit: cover;">
+					<a href="https://github.com/yann1945?tab=repositories">
+					<img src="https://avatars.githubusercontent.com/u/115077840?v=4" alt="img" style="object-fit: cover;">
 					</a>
 					<span>YannExdi</span>
 					<p>Programmer Karbitan<br>CTRL+C CTRL+V</p>
@@ -37,7 +37,11 @@
 							<ul class="nav_links">
 								<li class="nav_link"><a href="#" onClick="window.location.reload();">Home</a></li>
 								<li class="nav_link"><a href="https://api.yannownd.xyz">Rest Api</a></li>
-								<li class="nav_link"><a href="https://github.com/yann1945">Repository</a></li>
+								<li class="nav_link"><a href="https://github.com/yann1945?tab=repositories">Repository</a></li>
+								<li class="nav_link"><a href="https://grow-game-six.vercel.app">GrowwGames</a></li>
+								<li class="nav_link"><a href="https://unime-tv.vercel.app">UnimeTV</a></li>
+                                                                <li class="nav_link"><a href="https://victor-ai.vercel.app">Victor Ai</a></li>
+                                                                <li class="nav_link"><a href="https://yxdstore.vercel.app">Store</a></li>
 							</ul>
 						</div>
 					</nav>
