--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style2.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous">
 	</head>
 	<body>
@@ -55,12 +56,9 @@
 				</header>
 			</div>
 		</div>
-			<div class="col-xl-4">
-				<section class="main">
-					</a>
-					<span>YannExdi</span>
-					<p>Programmer Karbitan<br>CTRL+C CTRL+V</p>
-				</section>
-			</div>
+    <section class="main">
+        <span>Selamat Datang di Website Kami</span>
+        <p>Website ini adalah tempat terbaik untuk menemukan informasi dan layanan yang Anda butuhkan.</p>
+    </section>
 	</body>
 </html>
