--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</header>
 			</div>
 		</div>
-    <section class="main2">
+    <section class="mainddesk">
         <span>Selamat Datang di Website Kami</span>
         <p>Website ini adalah tempat terbaik untuk menemukan informasi dan layanan yang Anda butuhkan.</p>
     </section>
