--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
 				</header>
 			</div>
 		</div>
-    <section class="maindesk">
-        <span>Selamat Datang di Website Kami</span>
-        <p>Website ini adalah tempat terbaik untuk menemukan informasi dan layanan yang Anda butuhkan.</p>
-    </section>
+  <section class="description-section">
+    <h2>Tentang Website Ini</h2>
+    <p>Website ini dibuat oleh <b>YannXD</b>, seorang developer pemula yang penuh rasa ingin tahu dan semangat.  
+    Di sini, kamu bisa mengakses berbagai project menarik seperti REST API, tools, dan eksperimen web interaktif lainnya.</p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>Dibuat
 	</body>
 </html>
