--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</header>
 			</div>
 		</div>
-  <section class="description-section">
+  <section class="main3">
     <h2>Tentang Website Ini</h2>
     <p>Website ini dibuat oleh <b>YannXD</b>, seorang developer pemula yang penuh rasa ingin tahu dan semangat.  
     Di sini, kamu bisa mengakses berbagai project menarik seperti REST API, tools, dan eksperimen web interaktif lainnya.</p>
