--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>Dibuat
+    <p>Dibuat dengan <span style="color: red;">❤️</span> oleh <b>YannXD</b> • © 2025</p>
+  </footer>
 	</body>
 </html>
